# HPCAIFusion-CaseStudy

./: README.md
hpc-ai-heat2d/analysis/: compare_solutions.py  plot_roofline_stub.py  utils_io.py
hpc-ai-heat2d/cuda_solver/: CMakeLists.txt
hpc-ai-heat2d/cuda_solver/include/: heat2d.hpp
hpc-ai-heat2d/cuda_solver/src/: heat2d_kernel.cu  main.cu
hpc-ai-heat2d/pinn/: config.yaml  datasets.py  evaluate_pinn.py  models.py  train_pinn.py
